-Upgrade to Java 11 (submit missed files) #75